--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "vitest": "^3.2.4"
   },
   "compilerOptions": {
     "target": "ES6",
